# pitagents

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_test_users.py  0003_add_quotes.py  0004_add_chat_message_rating.py  0005_add_customers_vehicles.py  0006_add_customer_messages.py  0007_seed_customers_vehicles.py  0008_add_report_columns.py  0009_add_pdf_url_to_quotes.py  0010_add_shop_settings.py  0011_add_job_card_columns.py  0012_add_job_cards.py  0013_add_invoices.py  0014_add_appointments.py  0015_add_service_reminders.py  0016_add_inventory_items.py  0017_add_vendors_and_purchase_orders.py  0018_add_time_entries.py  0019_add_expenses.py  0020_add_carmd_to_shop_settings.py  0021_create_campaigns.py  0022_create_shop_agents.py  0023_add_persona_name.py  0024_add_vehicle_id_to_quotes.py  0025_update_technician_prompt.py  0026_google_oauth_and_demo_requests.py  0027_chat_messages_composite_index.py  0028_report_session_id_nullable.py  0029_technician_agent_report_tools.py  0030_technician_agent_full_inspection_workflow.py  9c5e490936db_add_chat_messages_and_user_preferences.py
backend/data/: parts_seed.csv
backend/scripts/: seed_demo.py  update_technician_prompt.py
backend/src/: config.py
backend/src/agent/: graph.py  state.py
backend/src/agents/: assistant.py  base.py  llm.py  (+5 more)
backend/tests/: conftest.py  test_e2e.py  test_models.py  test_pdf_service.py  test_quote_api.py  test_quote_tools.py  test_storage.py
(+359 files in other folders)
